<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QUIZ PYTHON OFPPT</string>
    <string name="app_namee" tools:ignore="DuplicateDefinition">Return</string>
    <string name="Sr">Score: 0</string>
    <string name="Btn_Start">Start</string>
    <string name="Quest">Question : 1/n</string>
    <string name="hamza">00:20</string>
    <string name="Question">Question will be here ....</string>
    <string name="Op1">Option 1</string>
    <string name="Op2">Option 2</string>
    <string name="Op3">Option 3</string>
    <string name="Op4">Option 4</string>
    <string name="Ne">Next</string>
    <string name="fore">40</string>
    <string name="truee">30</string>
    <string name="two">20</string>
    <string name="one">10</string>
    <string name="rt">Return</string>
    <string name="Qs">Combien de quiz voulez-vous?</string>

</resources>