<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/finn"
    tools:context=".MainActivity4">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quest"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/textQuestionNo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sr"
            android:textColor="@color/black"
            android:layout_below="@id/textQuestionNo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:id="@+id/textScore"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hamza"
            android:layout_alignParentEnd="true"
            android:textSize="37sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/textTimer"/>

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/radioGroup"
            android:layout_marginBottom="10dp"
            android:text="@string/Question"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/elkhammy"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="371dp"
            android:layout_height="182dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="361dp"
                android:layout_height="44dp"
                android:text="@string/Op1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="362dp"
                android:layout_height="43dp"
                android:text="@string/Op2"
                android:textSize="18sp" />


            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="360dp"
                android:layout_height="45dp"
                android:text="@string/Op3"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="358dp"
                android:layout_height="50dp"
                android:text="@string/Op4"
                android:textSize="18sp" />


        </RadioGroup>
        <Button

            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="20dp"
            android:background="@drawable/db_btn"
            android:text="@string/Ne"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            app:adSize="SMART_BANNER"
            app:adUnitId="ca-app-pub-4923676142882713/7651416893">

        </com.google.android.gms.ads.AdView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>