<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miroir"
    tools:context="com.exx.quizpythonofppt.QuezActivity">


    <RelativeLayout
        android:layout_width="415dp"
        android:layout_height="735dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textQuestionNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quest"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textQuestionNo"
            android:layout_marginTop="5dp"
            android:text="@string/Sr"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/hamza"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="37sp" />

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="384dp"
            android:layout_height="51dp"
            android:layout_above="@id/radioGroup"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="13dp"
            android:text="@string/Question"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/elkhammy"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="151dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="232dp">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/Op1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Op2"
                android:textSize="18sp" />


            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/Op3"
                android:textSize="18sp" />


        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="154dp"
            android:background="@drawable/db_btn"
            android:text="@string/Ne"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />




    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>