<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/accueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="407dp"
            android:layout_height="371dp"
            android:background="@color/material_on_background_disabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.698">

            <Button
                android:id="@+id/btn40"
                style="Bo"
                android:layout_width="78dp"
                android:layout_height="53dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="258dp"
                android:layout_marginTop="293dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/db_btn"
                android:text="@string/fore"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn20"
                android:layout_width="69dp"
                android:layout_height="72dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="259dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="287dp"
                android:background="@drawable/db_btn"
                android:text="@string/two"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn10"
                android:layout_width="74dp"
                android:layout_height="67dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="7dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="259dp"
                android:layout_marginBottom="287dp"
                android:background="@drawable/db_btn"
                android:text="@string/one"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn30"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="7dp"
                android:layout_marginTop="294dp"
                android:layout_marginEnd="258dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/db_btn"
                android:text="@string/truee"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="317dp"
                android:layout_height="294dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="37dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="53dp"
                android:layout_marginBottom="37dp"
                app:srcCompat="@drawable/maxc" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnR"
            android:layout_width="125dp"
            android:layout_height="41dp"
            android:layout_marginEnd="256dp"
            android:background="@drawable/back"
            android:text="@string/rt"
            android:textColor="#DD2C00"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.971"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="296dp"
            android:layout_height="66dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="44dp"
            android:text="@string/Qs"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="402dp"
            android:layout_height="105dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="74dp"
            app:adSize="SMART_BANNER"
            app:adUnitId="ca-app-pub-4923676142882713/7651416893"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.026">

        </com.google.android.gms.ads.AdView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
